--- a/exercises/exercise_1.html
+++ b/exercises/exercise_1.html
@@ -15,11 +15,34 @@
 
         <div data-role="content">
                 <form name="exercise_1" id="exercise_1">
-                    <div data-role='fieldcontain' >
-                        <input type='text' name='fear_1' placeholder='1.' onchange='submitExcerise_1()'/>
-                        <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_1()'/>
-                        <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_1()'/>
-                    </div>
+                    <table border="0">
+                        <tr>
+                            <td>
+                                <input type='text' name='fear_1' placeholder='1.' onchange='submitExcerise_1()'/> 
+                            </td>
+                            <td>
+                                <p style='color: #00FF00'>&#x2713;</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_1()'/>
+                            </td>
+                            <td>
+                                <p style='color: #00FF00'>&#x2713;</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_1()'/>
+                            </td>
+                            <td>
+                                <p style='color: #00FF00'>&#x2713;</p>
+                            </td>
+                        </tr>
+                        
+                        
+                    </table>
                 </form>
                 <script>
                     if (localStorage['exercise_1']) {
