--- a/sections/section_1_2.html
+++ b/sections/section_1_2.html
@@ -51,12 +51,12 @@
             <!-- /navbar -->
         </div>
         <!-- /footer -->
-        <audio style='visibility:hidden;height:0px;width:0px' id='audio1_2iOS' controls>
+        <audio style='visibility:hidden;height:0px;width:0px' id='audio1_2iOS'>
             <source src="../audio/1_2.mp4" type="video/mp4">
             <source src="../audio/1_2.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-        <video style='visibility:hidden;height:0px;width:0pxn' id='audio1_2Android' controls>
+        <video style='visibility:hidden;height:0px;width:0pxn' id='audio1_2Android'>
             <source src="../audio/1_2.mp4" type="video/mp4">
             <source src="../audio/1_2.mp3" type="video/mp3">
             Your browser does not support this audio format.
